--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
+@import url('http://fonts.cdnfonts.com/css/ds-digital');
+
 html {
-    background-color: yellow;
+    background-color: black;
+    font-family: 'DS-Digital', sans-serif;
 }
 
 body {
@@ -7,25 +10,62 @@ body {
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 110px;
+    color:white;
 }
 
-span {
-    font-size: 250px;
-    padding-bottom: 250px;
+.tempos {
+    font-size: 200px;
+    padding-bottom: 100px;
+    color: white;
 }
 
 .botoes {
-    background-color: purple;
-    color:white;
-    width: 200px;
-    height: 60px;
-    border-radius: 25px;
-    border-width: 3px;
-    border-color: white;
+    font-family: 'DS-Digital', sans-serif;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    border-style: none;
+    margin-left: 45px;
+    font-size: 90px;
+}
+
+#botaoparar {
+    color: red;
+}
+
+#botaoiniciar {
+    color: rgb(0, 255, 76);
+}
+
+#botaozerar {
+    color: rgb(4, 0, 255);
+}
+
+#horas {
+    color: rgb(0, 255, 76);
+}
+
+#minutos{
+    color: red;
+}
+
+#segundos{
+    color: rgb(4, 0, 255);
 }
 
 #tempo {
     padding-top: 100px;
     padding-bottom: 200px;
+}
+
+.grenn {
+    color: rgb(0, 255, 76);
+}
+
+.red {
+    color: red;
+}
+
+.blue {
+    color:rgb(4, 0, 255);
 }
